--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.7.2",
+    "@nuxt/content": "^2.13.2",
     "@nuxt/devtools": "latest",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.17.3",
-    "autoprefixer": "^10.4.14",
-    "nuxt": "^3.6.5",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^18.19.50",
+    "autoprefixer": "^10.4.20",
+    "nuxt": "^3.13.2",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.15",
-    "@heroicons/vue": "^2.0.18",
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.1.5",
+    "@vueuse/core": "^11.1.0",
+    "@vueuse/nuxt": "^11.1.0",
+    "axios": "^1.7.7",
+    "cheerio": "1.0.0-rc.12",
     "dplayer": "^1.27.1",
-    "hls.js": "^1.4.10",
-    "pinia": "^2.1.6"
+    "hls.js": "^1.5.15",
+    "keyv": "^5.0.1",
+    "naive-ui": "^2.39.0",
+    "pinia": "^2.2.2"
   }
 }
