--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nl-home",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -14,21 +15,22 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^18.19.50",
     "autoprefixer": "^10.4.20",
-    "nuxt": "^3.13.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
     "@vueuse/core": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
     "axios": "^1.7.7",
     "cheerio": "1.0.0-rc.12",
     "dplayer": "^1.27.1",
+    "nuxt": "^3.13.2",
+    "vue": "latest",
+    "vue-router": "latest",
     "hls.js": "^1.5.15",
     "keyv": "^5.0.1",
     "naive-ui": "^2.39.0",
-    "pinia": "^2.1.6"
+    "pinia": "^2.2.2"
   }
 }
