--- a/package.json
+++ b/package.json
@@ -10,27 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.13.2",
-    "@nuxt/devtools": "latest",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^18.19.50",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.1.5",
+    "@nuxt/content": "^2.13.2",
     "@vueuse/core": "^11.1.0",
+    "@vueuse/integrations": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
-    "axios": "^1.7.7",
-    "cheerio": "1.0.0-rc.12",
-    "dplayer": "^1.27.1",
-    "nuxt": "^3.13.2",
-    "vue": "latest",
-    "vue-router": "latest",
-    "hls.js": "^1.5.15",
     "keyv": "^5.0.1",
-    "naive-ui": "^2.39.0",
-    "pinia": "^2.2.2"
+    "nuxt": "^3.13.0",
+    "pinia": "^2.2.2",
+    "vue": "latest",
+    "vue-router": "latest"
   }
 }
