--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "@tailwindcss/typography": "^0.5.15"
   },
   "dependencies": {
-    "@nuxt/content": "^2.13.4",
-    "@nuxt/ui": "^2.20.0",
-    "@vueuse/core": "^11.3.0",
-    "@vueuse/integrations": "^11.3.0",
-    "@vueuse/nuxt": "^11.3.0",
-    "keyv": "^5.2.2",
-    "nuxt": "^3.14.1592",
-    "pinia": "^2.3.0",
+    "@iconify-json/solar": "^1.2.2",
+    "@nuxt/content": "^3.4.0",
+    "@nuxt/image": "^1.10.0",
+    "@nuxt/ui": "^3.0.2",
+    "@tailwindcss/vite": "^4.1.4",
+    "@vueuse/core": "^13.1.0",
+    "@vueuse/integrations": "^13.1.0",
+    "@vueuse/nuxt": "^13.1.0",
+    "motion-v": "^1.0.0-beta.2",
+    "nuxt": "^3.16.2",
+    "pinia": "^3.0.2",
     "qrcode": "^1.5.4",
-    "vue": "latest",
-    "vue-router": "latest"
+    "tailwindcss": "^4.1.4",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   }
 }
